<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/login"
            android:src="@drawable/login_image"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="?attr/colorPrimary"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/ed_login_email"
            app:layout_constraintEnd_toEndOf="@id/login_image"
            app:layout_constraintStart_toStartOf="@id/login_image"
            app:layout_constraintTop_toBottomOf="@id/login_image" />

        <com.kotlin.sups.ui.customview.EmailTextInput
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text" />

        <com.kotlin.sups.ui.customview.PasswordTextInput
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

        <TextView
            android:id="@+id/no_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_first"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/ed_login_password"
            app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

        <TextView
            android:id="@+id/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_now"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/no_acc"
            app:layout_constraintTop_toBottomOf="@id/ed_login_password"
            app:layout_constraintTop_toTopOf="@id/no_acc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_acc" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintTop_toTopOf="@id/login_button"
            app:trackCornerRadius="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>