<resources>
    <string name="app_name">Sups</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_invalid">Invalid Email!</string>
    <string name="password">Password</string>
    <string name="password_invalid">Password must be at least 8 characters long</string>
    <string name="register_first">Don\'t have an account yet?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="cannot_be_empty">This field cannot be empty</string>
    <string name="name">Name</string>
...
