<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/action_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
    </group>
</menu>